--- a/style.css
+++ b/style.css
@@ -48,6 +48,11 @@ section{
     height: 250px;
     background-color:#f8f9fc;
     padding-top: 30px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 70px;
+    margin-top: 50px;
     
     
 }
@@ -125,6 +130,9 @@ section{
     padding-bottom: 50px;
     padding-top: 50px;
     height: 300px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 .white {
@@ -142,8 +150,8 @@ section{
     text-align: center;
 }
 #together {
-    color: dimgrey;
-    font-size: 14px;
+    color: #696969c4;
+    font-size: 12px;
     text-align: center;
 }
 .project-button{
@@ -153,7 +161,7 @@ section{
     border-radius: 5px;
     color: hsl(0, 0%, 100%);
     font-weight: 700;
-   margin-left: 170px;
+   margin-left: 110px;
 
 }
 .service-button {
